# gas-lighter-fw

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
RTT/: CMakeLists.txt
app/: CMakeLists.txt
app/inc/: FreeRTOSConfig.h  app.h  cli_commands.h  cli_commands_fs.h  tusb_config.h  usb_descriptors.h
app/src/: app.c  cli_commands.c  cli_commands_fs.c  msc_disk.c  retarget.c
support/RTT/: CMakeLists.txt
support/fatfs/: CMakeLists.txt  diskio_config.h  fatfs.c  fatfs.h  ffconf.h  sram_diskio.c  sram_diskio_config.h
support/fatfs/drivers/: flash_diskio.c  flash_diskio.h  sram_diskio.c  sram_diskio.h
support/freertos_support/: freertos_hook.c
support/tinyusb/: msc_disk.c  tusb_config.h
targets/stm32f4/: .cproject  .mxproject  .project  CMakeLists.txt  gas-lighter-f4.ioc  stm32f4.ioc
targets/stm32f4/Core/Inc/: main.h  sram_driver.h
targets/stm32f4/Core/Src/: gpio.c  main.c  spi.c  sram_driver.c  stm32f4xx_it.c  usart.c  usb_otg.c
targets/stm32f4/cmake/: gcc-arm-none-eabi.cmake
targets/stm32f4/cmake/stm32cubemx/: CMakeLists.txt
targets/stm32f7/: .cproject  .mxproject  .project  CMakeLists.txt  STM32F746XX_FLASH.ld  gas-lighter-f7.ioc
targets/stm32f7/Core/Inc/: main.h  stm32f7xx_hal_conf.h  stm32f7xx_it.h
targets/stm32f7/Core/Src/: main.c  spi.c  stm32f7xx_it.c  usart.c  usb_otg.c
targets/stm32f7/Debug/: gas-lighter-f7.elf  gas-lighter-f7.list  gas-lighter-f7.map  makefile  objects.list
targets/stm32f7/Debug/Core/Src/: gpio.d  main.cyclo  main.d  main.su  spi.d  stm32f7xx_hal_msp.d  stm32f7xx_hal_timebase_tim.d  stm32f7xx_it.cyclo  stm32f7xx_it.d  stm32f7xx_it.su  subdir.mk  system_stm32f7xx.d  usart.d  usb_otg.d  usb_otg.su
targets/stm32f7/Debug/Drivers/STM32F7xx_HAL_Driver/Src/: stm32f7xx_hal.d  stm32f7xx_hal_cortex.d  stm32f7xx_hal_dma.d  stm32f7xx_hal_dma_ex.d  stm32f7xx_hal_exti.d  stm32f7xx_hal_flash.d  stm32f7xx_hal_flash_ex.d  stm32f7xx_hal_gpio.d  stm32f7xx_hal_i2c.d  stm32f7xx_hal_i2c_ex.d  stm32f7xx_hal_pcd.d  stm32f7xx_hal_pcd_ex.d  stm32f7xx_hal_pwr.d  stm32f7xx_hal_pwr_ex.d  stm32f7xx_hal_rcc.d  stm32f7xx_hal_rcc_ex.d  stm32f7xx_hal_spi.d  stm32f7xx_hal_spi_ex.d  stm32f7xx_hal_tim.d  stm32f7xx_hal_tim_ex.d  stm32f7xx_hal_uart.d  stm32f7xx_hal_uart_ex.d  stm32f7xx_ll_usb.d
targets/stm32f7/MDK-ARM/: gas-lighter-f7.uvoptx  gas-lighter-f7.uvprojx
targets/stm32f7/cmake/stm32cubemx/: CMakeLists.txt
